terraform/prod/ec2.tf
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners = ["amazon"]

  # Amazon Linux 2023 AMI
  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "app" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = var.instance_type
  vpc_security_group_ids = [aws_security_group.app_sg.id]
  key_name               = var.ec2_key_name
  subnet_id              = aws_subnet.public[0].id

  user_data = file("./user_data.sh")

  root_block_device {
    volume_type = "gp3"
    volume_size = 30
    delete_on_termination = true
  }

  tags = {
    Name      = "password-manager-instance"
    AutoStart = "true"
    AutoStop  = "true"
  }
}

resource "aws_instance" "db" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = var.db_instance_type
  vpc_security_group_ids = [
    aws_security_group.db_sg.id,
    aws_security_group.ecr_sg.id
  ]
  key_name               = var.ec2_key_name
  subnet_id              = aws_subnet.private[0].id
  iam_instance_profile   = aws_iam_instance_profile.ec2_ecr_instance_profile.name

  user_data = file("./db_user_data.sh")

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 30
    delete_on_termination = true
  }

  tags = {
    Name = "password-manager-db-instance"
    AutoStart = "true"
    AutoStop  = "true"
  }

  depends_on = [ aws_instance.app ]
}

resource "aws_iam_role" "ec2_ecr_role" {
  name = "ec2-ecr-access-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Effect = "Allow",
      Principal = {
        Service = "ec2.amazonaws.com"
      },
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ec2_ecr_attach" {
  role       = aws_iam_role.ec2_ecr_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
}

resource "aws_iam_instance_profile" "ec2_ecr_instance_profile" {
  name = "ec2-ecr-instance-profile"
  role = aws_iam_role.ec2_ecr_role.name
}
